--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dreso9ye9/image/upload/v1689178667/pin_pushpin_icon_231378_m2ot9c.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To do app</title>
   </head>
